k8s/applications/ai/vllm-embed/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm-embed
  labels:
    name: vllm-embed
